# battlesub

./: .travis.yml  CMakeLists.txt  README.md  battle_sub.cpp  battle_sub.h  build  common.h  contact_listener.h  debris.h  debris_factory.h  density_advection_shader.frag  density_advection_shader.h  density_diffusion_shader.frag  density_diffusion_shader.h  density_display_shader.frag  density_display_shader.h  density_shader.frag  density_shader.h  density_shader.vert  density_sources_shader.frag  density_sources_shader.h  diffusion_shader.frag  diffusion_shader.h  drawable_generic.h  emitter.h  emitter_factory.h  entity.h  entity_factory.h  entity_hook.h  error_handler.h  fluid_grid.cpp  fluid_grid.h  game_object.cpp  game_object.h  game_object_factory.h  global_emitter_factory.cpp  global_factories.cpp  global_factories.h  global_resources.h  landscape.h  (+37 more)
scripts/: build  build_dependencies  clean_all  run
src/: CMakeLists.txt  advect1d_shader.h  advect2d_shader.h  battle_sub.cpp  battle_sub.h  camera_dynamics.cpp  camera_dynamics.h  common.h  contact_listener.cpp  contact_listener.h  debris_factory.h  density_advection_shader.h  density_diffusion_shader.h  density_display_shader.h  density_sources_shader.h  drawable_generic.h  emitter.cpp  emitter.h  emitter_factory.h  entity.cpp  entity_factory.h  error_handler.h  fluid_final_composition_shader.h  fluid_grid.cpp  fluid_grid.h  game_object.cpp  game_object.h  global_emitter_factory.h  global_factories.cpp  global_factories.h  global_resources.cpp  ground_distortion_shader.h  lua_manager.hpp  lua_path.hpp  main_display_shader.h  math_helper.hpp  memory_pool.h  message_handler.h  message_handler.hpp  resource_storage.cpp  (+14 more)
src/bindings/: boid_system_config_lua.hpp  fluid_source_component_lua.hpp  status_component_lua.hpp
src/components/: boid_component.hpp  comp_physics.h  debug_render_velocity_probes_component.hpp  emitter_component.cpp  emitter_component.hpp  fluid_probes_component.hpp  fluid_source_component.hpp  parent_component.hpp  physics_component.hpp  status_component.hpp  visuals_component.hpp
src/gui_adapter/: boid_system_config_gui_adapter.hpp  fluid_source_component_config_gui_adapter.hpp  status_component_config_gui_adapter.hpp
src/lua/: config.lua  config_fluid_dynamics.lua
src/shaders/: advect_shader.h  density_advection_shader.frag  density_diffusion_shader.frag  density_display_shader.frag  density_display_shader.h  density_sources_shader.h  density_sources_shader.vert  fluid_final_composition_shader.frag  fluid_final_composition_shader.h  ground_distortion_shader.frag  ground_distortion_shader.h  jacobi_shader.h  main_display_shader.frag  source2d_shader.frag  source_shader.h  texture_base_unit_shader.vert  velocity_advection_shader.frag  velocity_diffusion_shader.frag  velocity_display_shader.frag  velocity_divergence_shader.h  velocity_gradient_substraction_shader.frag  velocity_gradient_substraction_shader.h  velocity_sources_shader.h
src/shaders/glsl/: advect1d_shader.frag  advect2d_shader.frag  density_display_shader.frag  density_sources_shader.frag  density_sources_shader.vert  fluid_final_composition_shader.frag  ground_distortion_shader.frag  jacobi1d_shader.frag  jacobi2d_shader.frag  source1d_shader.frag  source2d_shader.frag  texture_2d32f_render_2d32f_shader.frag  velocity_divergence_shader.frag  velocity_gradient_substraction_shader.frag  velocity_sources_shader.frag  velocity_sources_shader.vert
src/systems/: boid_system.cpp  boid_system.hpp  boid_system_config.hpp  debug_render_system.cpp  debug_render_system.hpp  emitter_system.cpp  emitter_system.hpp  fluid_interaction_system.cpp  fluid_interaction_system.hpp  game_object_factory.cpp  game_object_factory.hpp  game_object_system.cpp  game_object_system.hpp
